--- a/chart_google.html
+++ b/chart_google.html
@@ -33,6 +33,7 @@
 
 </head>
 <body>
+		<img src="https://chart.apis.google.com/chart?cht=qr&chs=250x250&chl=http://google.com">
   <div id="piechart" style="width: 900px; height: 500px;"></div>
 </body>
 </html>
