--- a/chart_google.html
+++ b/chart_google.html
@@ -28,6 +28,32 @@
 
         chart.draw(data, options);
       }
+	    
+	     google.charts.load('current', {
+        'packages':['geochart'],
+        // Note: you will need to get a mapsApiKey for your project.
+        // See: https://developers.google.com/chart/interactive/docs/basic_load_libs#load-settings
+        'mapsApiKey': 'AIzaSyD-9tSrke72PouQMnMX-a7eZSW0jkFMBWY'
+      });
+      google.charts.setOnLoadCallback(drawRegionsMap);
+
+      function drawRegionsMap() {
+        var data = google.visualization.arrayToDataTable([
+          ['Country', 'Popularity'],
+          ['Germany', 200],
+          ['United States', 300],
+          ['Brazil', 400],
+          ['Canada', 500],
+          ['France', 600],
+          ['RU', 700]
+        ]);
+
+        var options = {};
+
+        var chart = new google.visualization.GeoChart(document.getElementById('regions_div'));
+
+        chart.draw(data, options);
+      }
     </script>
 
 
@@ -35,5 +61,6 @@
 <body>
 		<img src="https://chart.apis.google.com/chart?cht=qr&chs=250x250&chl=http://google.com">
                 <div id="piechart" style="width: 900px; height: 500px;"></div>
+	        <div id="regions_div" style="width: 900px; height: 500px;"></div>
 </body>
 </html>
