--- a/chart_google.html
+++ b/chart_google.html
@@ -65,7 +65,7 @@
 <body>
 	        <marquee bgcolor="red">DEEPAK KUMAR</marquee>
 
-		<img src="https://chart.apis.google.com/chart?cht=qr&chs=250x250&chl=http://google.com">
+		<img src="https://chart.apis.google.com/chart?cht=qr&chs=250x250&chl=https://70deepak58.github.io/G2/L2p1/">
 	        <div id="regions_div" style="width: 900px; height: 500px;"></div>
 	        <div id="piechart" style="width: 900px; height: 500px;"></div>
 	   
