--- a/JS/input_2_3.html
+++ b/JS/input_2_3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script  defer src="input_2.js"></script>
+	<script  defer src="input_2_3.js"></script>
 </head>
 <body>
 	<h1>INPUT JS</h1>
