--- a/pdf.html
+++ b/pdf.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Using embed tag to display pdf</h1>
 	<div class="container">
-		<embed src="calendar.pdf" type="application/pdf" width="100%" height="600px"></embed>
+		<embed src="calendar.pdf#toolbar=0" type="application/pdf" width="100%" height="600px"></embed>
 	</div>
 
 </body>
