--- a/extra.html
+++ b/extra.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>All imp</title>
+	<base href="images/">
 </head>
 <body>
+	<h1>using base in img tag with head</h1>
+	<img src="f.png">
+	<img src="i.jpg">
 	<h1>auto download</h1>
 	<a href="calendar.pdf" download="calendar.pdf">PDF</a>
 	<a href="download.jpg" download="download.jpg">JPG</a>
