--- a/extra2.html
+++ b/extra2.html
@@ -9,6 +9,11 @@
 	<h1>using base in img tag with head</h1>
 	<img src="f.png">
 	<img src="i.jpg">
+	<h1>embed google map</h1>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28871.223821473664!2d86.70886427856591!3d25.240192626655148!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f1b8835a3ed4b1%3A0x34612a929b8542d4!2sMahadev%20Sthan!5e0!3m2!1sen!2sin!4v1622037648903!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+	
+	<h1>embed youtube</h1>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/VRLdv6MRM5s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
