--- a/scan.html
+++ b/scan.html
@@ -13,6 +13,10 @@
 	<p>whatsapp</p>
 	<img src="https://chart.apis.google.com/chart?cht=qr&chs=250x250&chl=https://wa.me/917033558158">
 	<p>telegram</p>
-	<img src="https://chart.apis.google.com/chart?cht=qr&chs=250x250&chl=https://wa.me/917033558158">
+	<img src="https://chart.apis.google.com/chart?cht=qr&chs=250x250&chl=https://t.me/de2ep4ak6">
+	<p>Mail me</p>
+	<img src="https://chart.apis.google.com/chart?cht=qr&chs=250x250&chl=mailto:70deepak58@gmail.com">
+	<p>Call me</p>
+	<img src="https://chart.apis.google.com/chart?cht=qr&chs=250x250&chl=tel:+917033558158">
 </body>
 </html>
