--- a/img_360.html
+++ b/img_360.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
+<h1>Use this site to take panorama image</h1>
+<p>https://pixexid.com/tag/360%20Panorama</p>
+<h1>Upload image here and take url use in iframe</h1>
+<p>https://www.momento360.com/</p>
+
 <iframe src="https://momento360.com/e/u/4dc3065887984fdca7849b7e08b7a169?utm_campaign=embed&utm_source=other&heading=0&pitch=0&field-of-view=75&size=medium" style="height:400px;width:500px;" title="Iframe Example"></iframe>
 </body>
 </html>
