--- a/React_demo2.html
+++ b/React_demo2.html
@@ -14,8 +14,8 @@
 
     <div id="root"></div>
 <script>
-import React from 'react';
-import ReactDOM from 'react-dom';
+// import React from 'react';
+// import ReactDOM from 'react-dom';
 
 const myfirstelement = <h1>Hello React!</h1>
 
