--- a/React_demo.html
+++ b/React_demo.html
@@ -8,13 +8,10 @@
     <div id="mydiv"></div>
 
     <script type="text/babel">
-      class Hello extends React.Component {
-        render() {
-          return <h1>Hello World!</h1>
-        }
-      }
+const myfirstelement = <h1>Hello React!</h1> ;
 
-      ReactDOM.render(<Hello />, document.getElementById('mydiv'))
-    </script>
+ReactDOM.render(myfirstelement, document.getElementById('root'));
+
+         </script>
   </body>
 </html>
