--- a/React_demo.html
+++ b/React_demo.html
@@ -5,7 +5,7 @@
   <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
   <body>
   
-    <div id="mydiv"></div>
+    <div id="root"></div>
 
     <script type="text/babel">
 const myfirstelement = <h1>Hello React!</h1> ;
