--- a/React_demo2.html
+++ b/React_demo2.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport"
-      content="width=device-width, initial-scale=1" /> 
-<script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+<html>
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-  
- <title>React App</title>
-  </head>
   <body>
-
+  
     <div id="root"></div>
-<script>
 
-const myfirstelement = <h1>Hello React!</h1> ;
+    <script type="text/babel">
+ 
+      const myfirstelement = <h1>Hello React!</h1> ;
+      ReactDOM.render(myfirstelement, document.getElementById('root'));
 
-ReactDOM.render(myfirstelement, document.getElementById('root'));
-
-</script>
-
+         </script>
   </body>
 </html>
