--- a/React_demo3.html
+++ b/React_demo3.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+  
+<body>
+  
+    <div id="root"></div>
 
+    <script type="text/babel">
+         import Car from './App.js';
+/*
+I used file app.js
+*/
+         ReactDOM.render(<Car />, document.getElementById('root'));
+
+         </script>
+  </body>
+</html>
