--- a/React_demo3.html
+++ b/React_demo3.html
@@ -10,7 +10,7 @@
 
     <script type="text/babel">
          import Car from './App.js';
-         import './App.css';
+         import 'App.css';
 /*
 I used file app.js
 */
