--- a/Tic_tac_toe_react.html
+++ b/Tic_tac_toe_react.html
@@ -1,3 +1,20 @@
+<!DOCTYPE html>
+<html>
+  <script src="https://unpkg.com/react@16/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js"></script>
+  <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
+  
+<body>
+    <div id="root"></div>
+
+    <script type="text/babel">
+         //import Car from './App.js';
+        // import 'App.css';
+/*
+I used file app.js
+*/
+
+
 import React from 'react';
 import "./App.css";
 
@@ -99,5 +116,9 @@ function calculateWinner(squares) {
 function App() {
   return <Game />
 }
+         ReactDOM.render(<Oar />, document.getElementById('root'));
+//export default App
+         </script>
+  </body>
+</html>
 
-export default App
