--- a/JS/input_2_3.html
+++ b/JS/input_2_3.html
@@ -19,6 +19,7 @@
 		window.alert("window.alert(we);");
 		window.prompt("window.prompt(re);");
 	</script>
+<button onclick="window.print()">Print this page</button>
 
 </body>
 </html>
