--- a/Screenshot.html
+++ b/Screenshot.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <title>Page Title</title>
+<script src= 
+
+"https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"> 
+
+    </script> 
 </head>
 <body>
 <div class="specific">
