--- a/JS/input_2_3.html
+++ b/JS/input_2_3.html
@@ -18,6 +18,7 @@
 		document.write("document.write(he);");
 		window.alert("window.alert(we);");
 		window.prompt("window.prompt(re);");
+                window.confirm("Press a button!");
 	</script>
 <button onclick="window.print()">Print this page</button>
 
