--- a/clock/digital.html
+++ b/clock/digital.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
     <link rel="stylesheet" href="../base.css" />
-    <link rel="stylesheet" href="00-clock-digital.css" />
+    <link rel="stylesheet" href="digital.css" />
   </head>
 
   <body>
