--- a/imageUpload/image_upload.html
+++ b/imageUpload/image_upload.html
@@ -7,6 +7,7 @@
 <meta charset=utf-8 />
 <title>JS Bin</title>
 <!--[if IE]>
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <script>
 function readURL(input) {
             if (input.files && input.files[0]) {
