--- a/camera.html
+++ b/camera.html
@@ -8,6 +8,6 @@
 <label for="imgF">Front Camera</label>
 <input type="file" id="imgF" capture="environment" accept="image/*">
 <label for="imgB">Back Camera</label>
-<input type="file" id="imgF" capture="user" accept="image/*">
+<input type="file" id="imgB" capture="user" accept="image/*">
 </body>
 </html>
