--- a/extra4.html
+++ b/extra4.html
@@ -2,12 +2,18 @@
 <html>
 <body>
 
+<button onclick="myFunction2()">reload document</button>
+
 <button onclick="myFunction()">Load new document</button>
 
 <script>
 function myFunction() {
   location.assign("https://www.w3schools.com");
 }
+function myFunction2() {
+ location.reload();
+}
+
 </script>
 
 </body>
