--- a/mouse.html
+++ b/mouse.html
@@ -44,19 +44,19 @@ const mousePositionObservable = new MousePositionObservable();
 mousePositionObservable.subscribe((x, y) => {
   const circle = document.querySelector('.circle');
    window.setTimeout(() => {
-     circle.style.transform = `translate(${x}px, ${y}px)`;
+     circle.style.transform = " translate(${x}px, ${y}px) ";
    }, 1000);
 });
 
 // Update the mouse positon container to show the mouse position values
 mousePositionObservable.subscribe((x, y) => {
   const board = document.querySelector('.mouse-position .position');
-  board.innerHTML = `
+  board.innerHTML = "
     <div>
        <div>ClientX: ${x}</div>
        <div>ClientY: ${y}</div>
     </div>
-  `
+  "
 })
 </script>
 <div class="container">
