--- a/compilerBasic.html
+++ b/compilerBasic.html
@@ -6,6 +6,6 @@
 <p>My first paragraph.!???</p>
 <div data-pym-src="https://www.jdoodle.com/embed/v0/3y04"></div>
 
-
+<script src=”https://www.jdoodle.com/assets/jdoodle-pym.min.js” type=”text/javascript”></script>
 </body>
 </html>
