--- a/compilerBasic.html
+++ b/compilerBasic.html
@@ -4,8 +4,8 @@
 
 <h1>My First Heading</h1>
 <p>My first paragraph.!???</p>
-<div data-pym-src="https://www.jdoodle.com/embed/v0/3y04"></div>
+<div data-pym-src="https://www.jdoodle.com/embed/v0/3y04?stdin=1&arg=0"></div>
 
-<script src=”https://www.jdoodle.com/assets/jdoodle-pym.min.js” type=”text/javascript”></script>
+
 </body>
 </html>
