--- a/compilerBasic.html
+++ b/compilerBasic.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>My First Heading</h1>
-<p>My first paragraph.!???</p>
+<p>My first paragraph.</p>
 <div data-pym-src="https://www.jdoodle.com/embed/v0/3y04?stdin=1&arg=0"></div>
 
 
