--- a/color.html
+++ b/color.html
@@ -27,13 +27,19 @@ h6 {
   }
 </style>
 <h1>Named colour</h1>
+<p>As the name implies, you bring in the color property and apply the value by naming the color you want. This may be red, green, blue, orange, crimson, cyan, or any other named color. There are around 147 named colors recognized by browsers.</p>
 <h2>Hexadecimal colour</h2>
+<p>The first 2 values stand for red, the next two stand for green, and the last 2 represent blue. With hex values, there's no limit to the shades of colors you can use.They start with the pound/number sign</p>
 <h3>rgb</h3>
+<p>RGB stands for red, green, and blue. With RGB colosr, you specify the color in terms of how much red, green, and blue you want. All three are expressed with numbers between 0 and 255.</p>
 <h4>rgba</h4>
+<p></p>
 <h5>hsl</h5>
+<p>Hue represents the color wheel in 360°. So, 0° is red, 120° is green and 240° is blue.
+Saturation is the amount of gray in the color, expressed as a percentage. 0% is the shade of gray and 100% is the color itself.
+Lightness is the amount of darkness and lightness in the color expressed as a percentage. 0% is black and 100% is white.</p>
 <h6>hsla</h6>
-
-<p>My first paragraph.</p>
+<p></p>
 
 </body>
 </html>
