--- a/color.html
+++ b/color.html
@@ -33,7 +33,7 @@ h6 {
 <h3>rgb</h3>
 <p>RGB stands for red, green, and blue. With RGB colosr, you specify the color in terms of how much red, green, and blue you want. All three are expressed with numbers between 0 and 255.</p>
 <h4>rgba</h4>
-<p></p>
+<p>The extra ‘a’ stands for alpha, which lets you specify the opacity of the color. It takes a value from 0.0 to 1.0 – 0.0 means 0% opacity, 0.5 means 50% opacity, and 1.0 means 100% opacity.</p>
 <h5>hsl</h5>
 <p>Hue represents the color wheel in 360°. So, 0° is red, 120° is green and 240° is blue.
 Saturation is the amount of gray in the color, expressed as a percentage. 0% is the shade of gray and 100% is the color itself.
