--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 <body>
 
 <input type="range" max="40" step="1" value="20">
-
+<input id="color" type="color" value="#f99090" />
 
 </body>
 </html>
