--- a/test.html
+++ b/test.html
@@ -4,9 +4,8 @@
 <title>Page Title</title>
 </head>
 <body>
-
-
 <input id="color" type="color" value="#f99090" />
+<input type="range" max="40" step="1" value="20">
 
 </body>
 </html>
