--- a/test.html
+++ b/test.html
@@ -4,6 +4,8 @@
 <title>Page Title</title>
 </head>
 <body>
+<style></style>
+<script></script>
 <input id="color" type="color" value="#f99090" />
 <input type="range" max="40" step="1" value="20">
 
