--- a/test.html
+++ b/test.html
@@ -8,6 +8,6 @@
 <script></script>
 <input id="color" type="color" value="#f99090" />
 <input type="range" max="40" step="1" value="20">
-
+<p>test on this</p>
 </body>
 </html>
