--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -6,31 +6,31 @@
     <body>
         <h1>Tic Tac Toe game</h1>
         <div id="a1" onclick="fu(this.id)">
-1
+-
         </div>
         <div id="a2" onclick="fu(this.id)">
-2
+-
         </div>
         <div id="a3" onclick="fu(this.id)">
-3
+-
         </div>
         <div id="a4" onclick="fu(this.id)">
-4
+-
         </div>
         <div id="a5" onclick="fu(this.id)">
-5
+-
         </div>
         <div id="a6" onclick="fu(this.id)">
-6
+-
         </div>
         <div id="a7" onclick="fu(this.id)">
-7
+-
         </div>
         <div id="a8" onclick="fu(this.id)">
-8
+-
         </div>
         <div id="a9" onclick="fu(this.id)">
-9
+-
         </div>
 
         <h1 id="heading">Enter player name first than play</h1>
@@ -76,6 +76,8 @@ Here is status
                 height: 80px;
                 width: 80px;
                 background-color: beige;
+                font-size: 80px;
+                text-align: center;
             }
             #a2{
                 position: relative;
