--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -59,6 +59,7 @@ Here is status
                 position: relative;
                 bottom: 395px;
                 width: 405px;
+                font-size: 30px;
             }
             #status{
                 background-color: aqua;
@@ -71,6 +72,7 @@ Here is status
                 bottom: 400px;
                 display: inline-block;
                 width:200px;
+                font-size: 30px;
             }
             #a1,#a2,#a3,#a4,#a5,#a6,#a7,#a8,#a9{
                 height: 80px;
@@ -184,7 +186,8 @@ function update(i){
 
             function fu(c_id){
                 t=c_id[1]-1;
-update(i);
+                if(arr[t]==" "){
+                    update(i);}
 
                 if(arr[t]==" "){
 
