--- a/Projects/snake_ladder/index.html
+++ b/Projects/snake_ladder/index.html
@@ -7,8 +7,12 @@
         <script src="script.js"></script>
     </head>
     <body>
+        <img src="snakes.jpg" alt="no">
         <button id="btn1" onclick="dice_roll()">Click</button>
         <div id=dice></div>
+
+
+        <div><img id="dice1" src="1.png" alt="no"></div>
         
     </body>
 </html>
