--- a/Projects/snake_ladder/index.html
+++ b/Projects/snake_ladder/index.html
@@ -14,6 +14,8 @@
         <div id=dice></div>
         <button id="btn1" onclick="dice_roll()">P1 CLICK</button> 
         <div id="P1">P1 SCORE: 0</div>
-        <div id="P2">P2 SCORE: 0</div> 
+        <div id="P2">P2 SCORE: 0</div>
+        <div id="Goti_P1">P1</div>
+        <div id="Goti_P2">P2</div>
     </body>
 </html>
