--- a/Projects/snake_ladder/index.html
+++ b/Projects/snake_ladder/index.html
@@ -11,7 +11,7 @@
         <img id="snake_img" src="snakes.jpg" alt="no"></div>
         
         
-        <div id=dice></div>
+        <div id=dice onclick="dice_roll()"></div>
         <button id="btn1" onclick="dice_roll()">P1 CLICK</button> 
         <div id="P1">P1 SCORE: 0</div>
         <div id="P2">P2 SCORE: 0</div>
