--- a/snake_ladder_2player/index.html
+++ b/snake_ladder_2player/index.html
@@ -20,5 +20,19 @@
         <div id="plus" onclick="snake_img_selectTo(this.id)">+</div>
         <div id="s_b_i_chg">CHANGE</div>
         <div id="minus" onclick="snake_img_selectTo(this.id)">-</div>
+        <audio id="myAudio_ludo">
+            <source src="ludo.mp3" type="audio/mp3">
+        </audio>
+
+        <audio id="myAudio_snake">
+            <source src="snake.wav" type="audio/wav">
+        </audio>
+
+        <audio id="myAudio_ladder">
+            <source src="ladder.wav" type="audio/wav">
+        </audio>
+        <audio id="myAudio_dice">
+            <source src="dice.wav" type="audio/wav">
+        </audio>
     </body>
 </html>
