--- a/Ludo_Advance/snake_ladder_both/index.html
+++ b/Ludo_Advance/snake_ladder_both/index.html
@@ -7,8 +7,8 @@
         <script src="script.js"></script>
     </head>
     <body>
-        <div>
-        <img id="snake_img" src="snakes.jpg" alt="no"></div>
+        <div id="snake_img">
+        </div>
         
         
         <div id=dice onclick="dice_roll_auto()"></div>
@@ -18,6 +18,9 @@
         <div id="Goti_P1">P1</div>
         <div id="Goti_P2">P2</div>
         <div id="status">Playing</div>
+        <div id="plus" onclick="snake_img_selectTo(this.id)">+</div>
+        <div id="s_b_i_chg">CHANGE</div>
+        <div id="minus" onclick="snake_img_selectTo(this.id)">-</div>
 
         <audio id="myAudio_ludo">
             <source src="ludo.mp3" type="audio/mp3">
@@ -32,6 +35,12 @@
         </audio>
         <audio id="myAudio_dice">
             <source src="dice.wav" type="audio/wav">
+        </audio>
+        <audio id="myAudio_win">
+            <source src="win.wav" type="audio/wav">
+        </audio>
+        <audio id="myAudio_loose">
+            <source src="loose.wav" type="audio/wav">
         </audio>
     </body>
 </html>
