--- a/Ludo_Advance/snake_ladder_2player/index.html
+++ b/Ludo_Advance/snake_ladder_2player/index.html
@@ -17,6 +17,7 @@
         <div id="P2">P2 SCORE: 0</div>
         <div id="Goti_P1">P1</div>
         <div id="Goti_P2">P2</div>
+        <div id="status">Playing</div>
         <div id="plus" onclick="snake_img_selectTo(this.id)">+</div>
         <div id="s_b_i_chg">CHANGE</div>
         <div id="minus" onclick="snake_img_selectTo(this.id)">-</div>
