--- a/Projects/clock/index.html
+++ b/Projects/clock/index.html
@@ -5,13 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="arrange()">
     <h1 id="digital">dig</h1>
     <div id="fix"></div>
-    <div id="mov"></div>
-    <script src="script.js"></script>
+    <div id="sec">S</div>
+    <div id="min">M</div>
+    <div id="hour">H</div>
+
+
+    <div id="a1">01</div>
+    <div id="a2">02</div>
+    <div id="a3">03</div>
+    <div id="a4">04</div>
+    <div id="a5">05</div>
+    <div id="a6">06</div>
+    <div id="a7">07</div>
+    <div id="a8">08</div>
+    <div id="a9">09</div>
+    <div id="a10">10</div>
+    <div id="a11">11</div>
+    <div id="a12">12</div>
+    
 </body>
 </html>
