--- a/Projects/clock/index.html
+++ b/Projects/clock/index.html
@@ -11,7 +11,7 @@
 <body onload="arrange()">
     <h1 id="digital">dig</h1>
     <div id="fix"></div>
-    <div id="sec">S</div>
+    <div id="sec"></div>
     <div id="min">M</div>
     <div id="hour">H</div>
 
@@ -28,6 +28,10 @@
     <div id="a10">10</div>
     <div id="a11">11</div>
     <div id="a12">12</div>
+
+    <div id="pro"><span>-</span><span>4</span><span>+</span></div>
+    <div id="pro"><span>-</span><span>30</span><span>+</span></div>
+    <button id="set" onclick="play()">SET</button>
     
 </body>
 </html>
