--- a/Projects/clock/index.html
+++ b/Projects/clock/index.html
@@ -29,9 +29,13 @@
     <div id="a11">11</div>
     <div id="a12">12</div>
 
-    <div id="pro"><span>-</span><span>4</span><span>+</span></div>
-    <div id="pro"><span>-</span><span>30</span><span>+</span></div>
+    <div id="pro1"><button id="h0" onclick="set(this.id)">-</button><span id="Ah">4</span><button id="h1" onclick="set(this.id)">+</button></div>
+    <div id="pro"><button id="m0" onclick="set(this.id)">-</button><span id="Am">30</span><button id="m1" onclick="set(this.id)">+</button></div>
     <button id="set" onclick="play()">SET</button>
+
+    <audio id="srced">
+        <source src="loose.wav" type="audio/wav">
+    </audio>
     
 </body>
 </html>
