--- a/Projects/clock/index.html
+++ b/Projects/clock/index.html
@@ -8,7 +8,7 @@
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="arrange()">
+<body onload="arrange()" id="theme">
     <h1 id="digital">dig</h1>
     <div id="fix"></div>
     <div id="sec"></div>
@@ -36,6 +36,7 @@
     <audio id="srced">
         <source src="loose.wav" type="audio/wav">
     </audio>
+
     
 </body>
 </html>
