--- a/Projects/clock/index.html
+++ b/Projects/clock/index.html
@@ -36,6 +36,7 @@
     <audio id="srced">
         <source src="loose.wav" type="audio/wav">
     </audio>
+<div id="greetings">greeting</div>
 
     
 </body>
