--- a/Projects/diano/index.html
+++ b/Projects/diano/index.html
@@ -15,12 +15,19 @@
 
     </div>
     <button onclick="run()" id="btn">START</button>
+
+
+
     <audio id="click_audio">
         <source src="jump.wav" type="audio/wav">
     </audio>
-
     <audio id="collide_audio">
         <source src="collide.wav" type="audio/wav">
     </audio>
+
+
+
+    <div ><p id="point">P:0</p></div>
+    <div ><p id="hi">HI:0</p></div>
 </body>
 </html>
