--- a/Projects/calculator/simple/index.html
+++ b/Projects/calculator/simple/index.html
@@ -51,7 +51,7 @@
 
         </div>
     </div>
-    <button onclick="vibrate()">click vibrate</button>
+    <button onclick="vibrate()" id="btn">click vibrate</button>
     
 </body>
 </html>
