--- a/Projects/calculator/simple/index.html
+++ b/Projects/calculator/simple/index.html
@@ -15,37 +15,37 @@
         <div id="function">
 
             <div class="tip">
-            <div id="a1">C</div>
-            <div id="a2">%</div>
-            <div id="a3">D</div>
-            <div id="a4">/</div>
+            <div id="a1" onclick="operation(this.id)">C</div>
+            <div id="a2" onclick="operation(this.id)">%</div>
+            <div id="a3" onclick="operation(this.id)">D</div>
+            <div id="a4" onclick="operation(this.id)">/</div>
             </div>
             <div class="tip">
-                <div id="a5">7</div>
-                <div id="a6">8</div>
-                <div id="a7">9</div>
-                <div id="a8">X</div>
+                <div id="a5" onclick="operation(this.id)">7</div>
+                <div id="a6" onclick="operation(this.id)">8</div>
+                <div id="a7" onclick="operation(this.id)">9</div>
+                <div id="a8" onclick="operation(this.id)">X</div>
                 </div>
     
                 <div class="tip">
-                <div id="a9">4</div>
-                <div id="a10">5</div>
-                <div id="a11">6</div>
-                <div id="a12">-</div>
+                <div id="a9" onclick="operation(this.id)">4</div>
+                <div id="a10" onclick="operation(this.id)">5</div>
+                <div id="a11" onclick="operation(this.id)">6</div>
+                <div id="a12" onclick="operation(this.id)">-</div>
                 </div>
     
                 <div class="tip">
-                <div id="a13">1</div>
-                <div id="a14">2</div>
-                <div id="a15">3</div>
-                <div id="a16">+</div>
+                <div id="a13" onclick="operation(this.id)">1</div>
+                <div id="a14" onclick="operation(this.id)">2</div>
+                <div id="a15" onclick="operation(this.id)">3</div>
+                <div id="a16" onclick="operation(this.id)">+</div>
                 </div>
 
                 <div class="tip">
-                    <div id="a17">00</div>
-                    <div id="a18">0</div>
-                    <div id="a19">.</div>
-                    <div id="a20">=</div>
+                    <div id="a17" onclick="operation(this.id)">00</div>
+                    <div id="a18" onclick="operation(this.id)">0</div>
+                    <div id="a19" onclick="operation(this.id)">.</div>
+                    <div id="a20" onclick="operation(this.id)">=</div>
                     </div>
 
 
