--- a/Projects/calculator/simple/index.html
+++ b/Projects/calculator/simple/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="result"></div>
+        <div id="result">0</div>
         <div id="input"></div>
         <div id="function">
 
