--- a/Projects/language/index.html
+++ b/Projects/language/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body onload="change()">
+<body onload="change()" id="bdy">
     <h1 id="l1"></h1>
     <p id="l2"></p>
     <img src="wiki.jpg" alt="nil">
@@ -18,6 +18,7 @@
     <img src="wiki.jpg" alt="nil">
     <button onclick="change()" id="l5"></button>
     <button id="scroll" onclick="goUp()"></button>
+    <button id="theme" onclick="setTheme()">DARKkk</button>
 
 
     
