--- a/Projects/ai/index.html
+++ b/Projects/ai/index.html
@@ -11,6 +11,11 @@
     <input type="text" id="chat">
     <button onclick="run()">click</button>
     <audio id="music"><source src="ludo.mp3"></audio>
+    <p>play</p>
+    <p>pause</p>
+    <p>mail  abc@gmail.com</p>
+    <p>call 99999999</p>
+    <p>open google</p>
     
 </body>
 </html>
