--- a/Projects/ai/index.html
+++ b/Projects/ai/index.html
@@ -5,17 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
 <body>
     <input type="text" id="chat">
     <button onclick="run()">click</button>
-    <audio id="music"><source src="ludo.mp3"></audio>
-    <p>play</p>
-    <p>pause</p>
+    <audio id="music"><source src="1.mp3" id="sr"></audio>
+    <img src="image/1.jpeg" alt="" id="image">
+    <p>music play</p>
+    <p>music next</p>
+    <p>music prev</p>
+    <p>music pause</p>
+    
     <p>mail  abc@gmail.com</p>
     <p>call 99999999</p>
     <p>open google</p>
+    <p>telegram enter_id</p>
+    <p>whatsapp 746574578478</p>
+
+    <p>image show</p>
+    <p>image hide</p>
+    <p>image next</p>
+    <p>image prev</p>
     
 </body>
 </html>
