--- a/Projects/ai/index.html
+++ b/Projects/ai/index.html
@@ -8,26 +8,29 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body>
+<body id="bdy">
     <input type="text" id="chat">
-    <button onclick="run()">click</button>
+    <button onclick="run()" id="btn">click</button>
     <audio id="music"><source src="1.mp3" id="sr"></audio>
     <img src="image/1.jpeg" alt="" id="image">
-    <p>music play</p>
-    <p>music next</p>
-    <p>music prev</p>
-    <p>music pause</p>
+    <p id="x1">music play</p>
+    <p id="x2">music next</p>
+    <p id="x3">music prev</p>
+    <p id="x4">music pause</p>
     
-    <p>mail  abc@gmail.com</p>
-    <p>call 99999999</p>
-    <p>open google</p>
-    <p>telegram enter_id</p>
-    <p>whatsapp 746574578478</p>
+    <p id="x5">mail  abc@gmail.com</p>
+    <p id="x6">call 99999999</p>
+    <p id="x7">open google</p>
+    <p id="x8">telegram enter_id</p>
+    <p id="x9">whatsapp 746574578478</p>
 
-    <p>image show</p>
-    <p>image hide</p>
-    <p>image next</p>
-    <p>image prev</p>
+    <p id="x10">image show</p>
+    <p id="x11">image hide</p>
+    <p id="x12">image next</p>
+    <p id="x13">image prev</p>
+
+    <p id="x14">background any_color_name</p>
+    <p id="x15">theme next</p>
     
 </body>
 </html>
