--- a/Projects/ai/index.html
+++ b/Projects/ai/index.html
@@ -32,6 +32,8 @@
     <p id="x14">background any_color_name</p>
     <p id="x15">theme next</p>
     <p id="x16">project project_name</p>
+    <p id="x17">vibrate</p>
+    <p id="x18">if choice not match forward to google</p>
     
 </body>
 </html>
