--- a/Projects/ai/index.html
+++ b/Projects/ai/index.html
@@ -34,6 +34,8 @@
     <p id="x16">project project_name</p>
     <p id="x17">vibrate</p>
     <p id="x18">if choice not match forward to google</p>
+    <p id="x19">location</p>
+    <div id="location"></div>
     
 </body>
 </html>
