--- a/Projects/chat_app/index.html
+++ b/Projects/chat_app/index.html
@@ -12,7 +12,8 @@
     <div id="div1"></div>
     <input type="text" id="ipt">
     <button onclick="create()" id="btn">create</button>
-
+    <button id="btn2" onclick="text_to_speech_for_user()">start</button>
+    <button id="btn3">stop</button>
     
 </body>
 </html>
