--- a/Projects/mySR/index.html
+++ b/Projects/mySR/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <input type="text" id="txt">
     <button onclick="test()">start</button>
     <audio id="mus"><source src="" id="sr"></audio>
     <script src="script.js"></script>
