--- a/Projects/ai_auto/index.html
+++ b/Projects/ai_auto/index.html
@@ -15,8 +15,8 @@
     <img src="image/1.jpeg" alt="" id="image">
     <p id="x1">music play</p>
     <p id="x2">music next</p>
-    <p id="x3">music prev</p>
-    <p id="x4">music pause</p>
+    <p id="x3">music previous</p>
+    <p id="x4">music stop</p>
     
     <p id="x5">mail  abc@gmail.com</p>
     <p id="x6">call 99999999</p>
@@ -24,10 +24,10 @@
     <p id="x8">telegram enter_id</p>
     <p id="x9">whatsapp 746574578478</p>
 
-    <p id="x10">image show</p>
+    <p id="x10">image display</p>
     <p id="x11">image hide</p>
     <p id="x12">image next</p>
-    <p id="x13">image prev</p>
+    <p id="x13">image previous</p>
 
     <p id="x14">background any_color_name</p>
     <p id="x15">theme next</p>
