--- a/Projects/google_alexa/index.html
+++ b/Projects/google_alexa/index.html
@@ -12,5 +12,6 @@
     <button id="stop">stop</button>
     <div id="container"></div>
     <script src="script.js"></script>
+    <button onclick="chalte_rho()" id="chl">rady</button>
 </body>
 </html>
