--- a/screen/index.html
+++ b/screen/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="start()">start</button>
-    <button id="stop()">stopl</button>
+    <button onclick="start()">start</button>
+    <button onclick="stop()">stop</button>
     <script src="script.js"></script>
 </body>
 </html>
