--- a/screen/index.html
+++ b/screen/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <button onclick="start()">start</button>
-    <button onclick="stop()">stop</button>
+    <button onclick="stop()">stop lock</button>
     <script src="script.js"></script>
 </body>
 </html>
