--- a/Pattern/index.html
+++ b/Pattern/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <button type="button" id="new">Show new</button>
 <div id="pattern"></div>
 
 
-<script src="scripts.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
