--- a/Projects/gesture/text/index.html
+++ b/Projects/gesture/text/index.html
@@ -21,7 +21,7 @@
             background-color: yellow;
         }
         #doe{
-            position: sticky;
+            position: absolute;
             width: 30px;
             height: 30px;
             color: red;
